--- a/run/server.properties
+++ b/run/server.properties
@@ -1,12 +1,14 @@
 #Minecraft server properties
+#Sat Feb 01 20:24:49 CET 2025
 level-name=world
 view-distance=10
 white-list=false
-server-ip=
 pvp=true
+server-ip=
 level-seed=
 spawn-animals=true
 server-port=25565
+allow-nether=true
 spawn-monsters=true
 max-players=20
 online-mode=false
